Fixed queue-text alignment

--- a/css/queues.css
+++ b/css/queues.css
@@ -165,7 +165,7 @@
 /*SoundCloud Font awesome*/
 #queues .fa-soundcloud {
   font-size: 34px;
-  margin-right: 5px;
+  margin-right: 6px;
   margin-top: 6px;
   margin-bottom: 5px;
   z-index: 1000;
